--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,30 @@
+body {
+  margin: 0;
+}
+
+.navbar {
+  width: 100%;
+  height: 30px;
+  padding: 15px 0;
+  background-color: #5d5553;
+  /* box-sizing: border-box; */
+}
+
+.navbar-title {
+  color: white;
+  margin-left: 10px;
+  line-height: 30px;
+}
+
+.search-box {
+  padding: 20px 10px 10px 10px;
+}
+
+.search-input {
+  width: 30%;
+  padding: 5px;
+}
+
 .books-container {
   display: flex;
   flex-direction: row;
@@ -46,4 +73,39 @@
   border: 0;
   border-radius: 5px;
   color: white;
+}
+
+.breadcrumbs {
+  padding: 0 10%;
+  margin-bottom: 0;
+}
+
+.book-detail-container {
+  display: flex;
+  flex-direction: row;
+  padding: 20px 10% 0 10%;
+}
+
+.book-detail-cover-wrapper {
+  /* width: calc(0.2 * 80%); */
+  width: 35%;
+  height: 400px;
+}
+
+.book-detail-cover-image {
+  width: 100%;
+  height: 100%;
+}
+
+.book-detail-misc {
+  /* width: calc(0.8 * 80%); */
+  width: 65%;
+  /* height: 400px; */
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+.book-detail-title {
+  font-size: 35px;
+  margin: 0;
 }
