--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+.page-container {
+  min-width: 320px;
+}
+
 .navbar {
   width: 100%;
   height: 30px;
@@ -15,13 +19,31 @@ body {
   line-height: 30px;
 }
 
+.content-wrapper {
+  max-width: 1024px;
+  margin-bottom: 30px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .content-wrapper {
+    margin-left: calc((100vw - 1024px) / 2);
+  }
+}
+
 .search-box {
   padding: 20px 10px 10px 10px;
 }
 
 .search-input {
-  width: 30%;
+  width: 100%;
+  box-sizing: border-box;
   padding: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .search-input {
+    width: 30%;
+  }
 }
 
 .books-container {
@@ -31,12 +53,26 @@ body {
 
 .books-container > div {
   position: relative;
-  width: calc(0.25 * (100% - 80px));
+  width: 100%;
   margin: 10px;
   padding: 5px 5px 45px 5px;
   box-sizing: border-box;
   justify-content: center;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 30px 0px;
+}
+
+@media only screen and (min-width: 768px) {
+  .books-container > div {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .books-container > div {
+    width: calc(0.25 * (100% - 80px));
+    margin: 10px;
+    padding: 5px 5px 45px 5px;
+  }
 }
 
 .book-cover {
@@ -72,13 +108,24 @@ body {
 
 .book-detail-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   padding: 20px 10% 0 10%;
 }
 
+@media only screen and (min-width: 1024px) {
+  .book-detail-container {
+    flex-direction: row;
+  }
+}
+
 .book-detail-cover-wrapper {
-  width: 35%;
   height: 400px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .book-detail-cover-wrapper {
+    width: 35%;
+  }
 }
 
 .book-detail-cover-image {
@@ -90,6 +137,13 @@ body {
   width: 65%;
   padding: 0 20px;
   box-sizing: border-box;
+  margin-top: 20px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .book-detail-misc {
+    margin-top: 0;
+  }
 }
 
 .book-detail-title {
